--- a/src/TinderCards.css
+++ b/src/TinderCards.css
@@ -4,10 +4,10 @@
     padding: 20px;
     max-width: 85vw;
     height: 50vh;
-    border-radius: 20px;
+    border-radius: 25px;
     background-size: cover;
     background-position: center;   
-    box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.3);
+    box-shadow: 10px 10px 10px rgba(0,0,0, 0.3);
 }
 
 .card > h3 {
@@ -19,7 +19,7 @@
 .tinderCards__cardContainer {
     display: flex;
     justify-content: center;
-    margin-top: 5vh;
+    margin-top: 2vh;
 }
 
 .swipe {
