--- a/src/ChatScreen.css
+++ b/src/ChatScreen.css
@@ -1,7 +1,50 @@
-.chatScreen__message {
-    display: flex;
+.chatScreen__timestamp {
+    color: gray;
     padding: 20px;
-    align-items: center;
-    justify-content: space-between;
+    text-align: center;
+}
+
+.chatScreen__message{
+     display: flex;
+     align-items: center;
+     padding: 20px;
+}
+
+.chatScreen__text {
+   margin-left: 10px;
+   background-color: lightgray;
+   padding: 15px;
+   border-radius: 20px;
+}
+
+.chatScreen__textUser {
+    margin-left: auto;
+    background-color: #D22B2B;
+    padding: 15px;
+    border-radius: 20px;
+    color: white;
+}
+
+.chatScreen__input {
+    display: flex;
+    padding: 5px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    border-top: 1px solid lightgray;
+}
+
+.chatScreen__inputField {
+    flex: 1;
+    padding: 10px;
+    border: none;
+}
+
+.chatScreen__inputButton {
+    border: none;
+    margin-right: 20px;
+    background-color: white;
+    font-weight: bolder;
+    color: red;
 }
 
